currentu_user_id query param added
